getCVs